# PromptVeil

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh  check_prereqs.ps1  check_prereqs.sh  install_deps.sh
.github/workflows/: build.yml
cmake/: FindJulia.cmake  FindPromptVeilCore.cmake  FindRust.cmake
promptveil/core/compression/: Project.toml  build.jl  setup.jl
promptveil/core/compression/src/: PromptVeilCore.jl  julia_init.h
promptveil/core/compression/test/: runtests.jl
promptveil/core/compression/token-compression-rs/: API.md  Cargo.toml  README.md  build.rs
promptveil/core/compression/token-compression-rs/examples/: basic.rs
promptveil/core/compression/token-compression-rs/src/: error.rs  lib.rs  tests.rs
promptveil/core/format/: Cargo.toml
promptveil/core/format/format-rs/: API.md  Cargo.toml  README.md
promptveil/core/format/format-rs/benches/: format_benchmark.rs
promptveil/core/format/format-rs/src/: lib.rs  schema.rs  serialization.rs  tests.rs  versioning.rs
promptveil/core/format/src/: benchmarks.rs  error.rs  index.rs  io_utils.rs  lib.rs  tests.rs
promptveil/core/index/index-rs/: API.md  Cargo.toml  README.md
promptveil/core/index/index-rs/src/: config.rs  errors.rs  lib.rs  tests.rs  text_index.rs  vector_index.rs
promptveil/core/promptveil-core/: Cargo.toml  README.md
promptveil/core/promptveil-core/src/: conversation.rs  embeddings.rs  error.rs  lib.rs  python.rs  tests.rs
promptveil/core/security/: Cargo.toml  README.md  build.rs  pyproject.toml  test_integration.py
promptveil/core/security/.cargo/: config.toml
promptveil/core/security/security-rs/: API.md  Cargo.toml  README.md
promptveil/core/security/security-rs/src/: encryption.rs  key_management.rs  lib.rs  memory.rs  tests.rs
promptveil/core/security/src/: compression.rs  io.rs  julia.rs  julia_impl.rs  layouts.rs  lib.rs  security.rs
promptveil/docs/: ARCHITECTURE.md  BENCHMARKS.md  COMPRESSION.md  CONTRIBUTING.md  FORMAT.md  INDEXING.md  INSTALL.md  PYTHON_API.md  SECURITY.md
promptveil/python/: README.md  pyproject.toml  requirements.txt  setup.py
promptveil/python/promptveil/: __init__.py  cli.py  compression.py  conversation.py  exceptions.py  format.py  indexing.py  metrics.py  store.py  utils.py
promptveil/python/promptveil/benchmarks/: compression_benchmark.py
promptveil/python/promptveil/core/: __init__.py  compression.py  security.py
promptveil/python/promptveil/models/: __init__.py  config.py  conversation.py  exceptions.py
promptveil/python/promptveil/storage/: gdrive.py
promptveil/python/promptveil/utils/: __init__.py  helpers.py
promptveil/python/tests/: dxdiag_output.txt  test_compression.py  test_format.py  test_import.py  test_indexing.py  test_integration.py  test_metrics.py  test_optimization.py  test_security.py  test_store.py
