[tool.poetry]
name = "promptveil"
version = "0.1.0"
description = "Privacy-focused LLM interaction library"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "promptveil"}]

[tool.poetry.dependencies]
python = "^3.7"
promptveil-core = {path = "../core/security", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 