[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "promptveil"
version = "0.1.0"
description = "A framework for secure, efficient storage and retrieval of LLM conversations"
authors = [
    {name = "PromptVeil Team", email = "team@promptveil.ai"}
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.20.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "aiofiles>=23.0.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "promptveil._core"
bindings = "pyo3"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3 