[package]
name = "promptveil-format"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
regex = "1.10"
pyo3 = { version = "0.20.2", features = ["extension-module"], optional = true }

[features]
default = []
pyo3 = ["dep:pyo3"]

[dev-dependencies]
criterion = "0.5" 