[package]
name = "promptveil-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "promptveil_core"
crate-type = ["cdylib"]

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
rand = "0.8"
aes-gcm = "0.10.3"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"

[build-dependencies]
bindgen = "0.69.2"
glob = "0.3.1"

[package.metadata.maturin]
python-source = "python"

[package.metadata.cargo-post]
dependencies = ["julia"]

# Configuração de linking
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.build]
rustflags = ["-C", "link-args=-Wl,-rpath,$ORIGIN"] 