[package]
name = "promptveil_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "promptveil_core"
crate-type = ["cdylib"]

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
jlrs = { version = "0.21.1", features = ["local-rt", "julia-1-11", "async"] }
aes-gcm = "0.10.3"
rand = "0.8.5"
thiserror = "1.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"

[build-dependencies]
bindgen = "0.69.2"
glob = "0.3.1"
pyo3-build-config = "0.20"

[package.metadata.maturin]
python-source = "python"

[package.metadata.cargo-post]
dependencies = ["julia"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort" 