[package]
name = "promptveil_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "promptveil_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
jlrs = { version = "0.21.1", features = ["ccall", "jlrs-derive", "julia-1-11"] }
aes-gcm = "0.10.3"
rand = "0.8.5"
thiserror = "1.0"

[build-dependencies]
pyo3-build-config = "0.20"

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3"]

[profile.release]
panic = "abort" 