[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "promptveil-core"
version = "0.1.0"
requires-python = ">=3.7"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "Core functionality for PromptVeil"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.maturin]
features = ["pyo3/extension-module"] 