[package]
name = "index-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Search and indexing
tantivy = "0.22.0"
memmap2 = "0.5.10"  # Memory mapping for efficient file access
bincode = "1.3"     # Para serialização do estado do índice

# Utilities
log = "0.4"
env_logger = "0.11.1"
async-trait = "0.1.77"
futures = "0.3"

# Vector search
hnsw_rs = "0.3.1"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full", "test-util"] }
futures = "0.3.30"
criterion = "0.4"  # Usando uma versão mais antiga e estável
tokio-test = "0.4"
rand = "0.8"
tempfile = "3.10.0"

[lib]
name = "index_rs"
crate-type = ["rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true 