[package]
name = "security-rs"
version = "0.1.0"
edition = "2021"
authors = ["Paulo M. Vinhas (@pmatheusvinhas)"]
description = "Security layer for PromptVeil using hardware-accelerated encryption"
license = "MIT"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
thiserror = "1.0.57"
tracing = "0.1.40"
futures = "0.3.30"
aes-gcm = "0.10.3"
rand = "0.8.5"
zeroize = "1.7.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full", "test-util"] }
futures = "0.3.30"
criterion = "0.5.1"

[lib]
name = "security_rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
strip = true
panic = "abort"
codegen-units = 1 